--- a/notebooks/.diffs/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.html
+++ b/notebooks/.diffs/Red Black Graph - A DAG of Multiple, Interleaved Binary Trees.html
@@ -12141,7 +12141,7 @@ $$R^+[i,j] = \begin{cases}
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># %load ../redblackgraph/reference/warshall.py</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># %load ../redblackgraph/reference/transitive_closure.py</span>
 <span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">from</span> <span class="nn">dataclasses</span> <span class="k">import</span> <span class="n">dataclass</span>
 <span class="kn">from</span> <span class="nn">typing</span> <span class="k">import</span> <span class="n">Sequence</span>
@@ -12153,11 +12153,11 @@ $$R^+[i,j] = \begin{cases}
     <span class="n">W</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span>
     <span class="n">diameter</span><span class="p">:</span> <span class="nb">int</span>
 
-<span class="k">def</span> <span class="nf">warshall</span><span class="p">(</span><span class="n">M</span><span class="p">:</span> <span class="n">Sequence</span><span class="p">[</span><span class="n">Sequence</span><span class="p">[</span><span class="nb">int</span><span class="p">]])</span> <span class="p">:</span>
+<span class="k">def</span> <span class="nf">transitive_closure</span><span class="p">(</span><span class="n">M</span><span class="p">:</span> <span class="n">Sequence</span><span class="p">[</span><span class="n">Sequence</span><span class="p">[</span><span class="nb">int</span><span class="p">]])</span> <span class="p">:</span>
     <span class="sd">&#39;&#39;&#39;Computes the transitive closure of a Red Black adjacency matrix and as a side-effect,</span>
 <span class="sd">    the diameter.&#39;&#39;&#39;</span>
 
-    <span class="c1"># Modification of stardard warshall algorithm:</span>
+    <span class="c1"># Modification of stardard transitive_closure algorithm:</span>
     <span class="c1"># * Replaces innermost loop&#39;s: `W[i][j] = W[i][j] or (W[i][k] and W[k][j])`</span>
     <span class="c1"># * Adds diameter calculation</span>
     <span class="n">n</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">M</span><span class="p">)</span>
@@ -12196,7 +12196,7 @@ $$R^+[i,j] = \begin{cases}
      <span class="p">[</span> <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">1</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">],</span>
      <span class="p">[</span> <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">,</span>  <span class="mi">0</span><span class="p">],</span>
      <span class="p">[</span> <span class="mi">2</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">1</span><span class="p">]]</span>
-<span class="n">warshall</span><span class="p">(</span><span class="n">R</span><span class="p">)</span><span class="o">.</span><span class="n">W</span>
+<span class="n">transitive_closure</span><span class="p">(</span><span class="n">R</span><span class="p">)</span><span class="o">.</span><span class="n">W</span>
 </pre></div>
 
 </div>
@@ -12772,7 +12772,7 @@ $$R^+ \lor \vec{v_{s}} = \vec{v_{c}}$$</p>
 <div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">canonical_sort</span><span class="p">(</span><span class="n">warshall</span><span class="p">(</span><span class="n">R</span><span class="p">)</span><span class="o">.</span><span class="n">W</span><span class="p">)</span><span class="o">.</span><span class="n">A</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">canonical_sort</span><span class="p">(</span><span class="n">transitive_closure</span><span class="p">(</span><span class="n">R</span><span class="p">)</span><span class="o">.</span><span class="n">W</span><span class="p">)</span><span class="o">.</span><span class="n">A</span>
 </pre></div>
 
 </div>
@@ -12889,7 +12889,7 @@ $\det R =
      <span class="p">[</span> <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">1</span><span class="p">]</span>  <span class="c1"># Em</span>
     <span class="p">]</span>
 <span class="n">B</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">A</span><span class="p">)</span>
-<span class="n">res</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">warshall</span><span class="p">(</span><span class="n">B</span><span class="p">)</span>
+<span class="n">res</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">transitive_closure</span><span class="p">(</span><span class="n">B</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">f</span><span class="s2">&quot;A_star:</span><span class="se">\n</span><span class="si">{res.W}</span><span class="s2"> </span><span class="se">\n</span><span class="s2">diameter: </span><span class="si">{res.diameter}</span><span class="s2">&quot;</span><span class="p">)</span>
 </pre></div>
 
@@ -12963,7 +12963,7 @@ diameter: 3
       <span class="p">[</span> <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">1</span><span class="p">]</span>  <span class="c1"># Em</span>
      <span class="p">]</span>
 <span class="n">B1</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">A1</span><span class="p">)</span>
-<span class="n">res</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">warshall</span><span class="p">(</span><span class="n">B1</span><span class="p">)</span>
+<span class="n">res</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">transitive_closure</span><span class="p">(</span><span class="n">B1</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">f</span><span class="s2">&quot;A1_star:</span><span class="se">\n</span><span class="si">{res.W}</span><span class="s2"> </span><span class="se">\n</span><span class="s2">diameter: </span><span class="si">{res.diameter}</span><span class="s2">&quot;</span><span class="p">)</span>
 </pre></div>
 
@@ -13111,7 +13111,7 @@ diameter: 3
       <span class="p">[</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">1</span><span class="p">,</span>  <span class="mi">0</span><span class="p">],</span> <span class="c1"># Em</span>
       <span class="p">[</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">0</span><span class="p">,</span>  <span class="mi">2</span><span class="p">,</span>  <span class="mi">3</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># J</span>
       <span class="p">]</span>
-<span class="n">R</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">warshall</span><span class="p">(</span><span class="n">R1</span><span class="p">)</span><span class="o">.</span><span class="n">W</span>
+<span class="n">R</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">transitive_closure</span><span class="p">(</span><span class="n">R1</span><span class="p">)</span><span class="o">.</span><span class="n">W</span>
 <span class="c1"># Missing edge is R -&gt; J, 2</span>
 <span class="n">A_lambda</span> <span class="o">=</span> <span class="n">smp</span><span class="o">.</span><span class="n">edge_relational_composition</span><span class="p">(</span><span class="n">R</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">14</span><span class="p">,</span> <span class="mi">2</span><span class="p">)</span>
 <span class="n">A_lambda</span>
@@ -13171,7 +13171,7 @@ diameter: 3
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%</span><span class="k">timeit</span>
 B1 = copy.deepcopy(A1)
-res = smp.warshall(B1)
+res = smp.transitive_closure(B1)
 </pre></div>
 
 </div>
